tests/rosetta/out/Java/100-doors-3.java
// Generated by Mochi compiler v0.10.26 on 2025-07-16T09:29:49Z
// 100-doors-3.mochi
import java.util.*;

public class 100Doors3 {
    public static void main(String[] args) {
    String result = "";
    for (int i = 1; i < 101; i++) {
        int j = 1;
        while (String.valueOf(j * j).compareTo(String.valueOf(i)) < 0) {
            j = (int)(j + 1);
        }
        if (Objects.equals(j * j, i)) {
            result = result + "O";
        }
        else {
            result = result + "-";
        }
    }
    System.out.println(result);
    }
}
